[Bug #164927648] Remove extra white space
Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -16,6 +16,9 @@
   --bodyFontFamilyFallback: sans-serif;
   --limeColor: lime;
 }
+.body{
+  overflow-x: hidden;
+}
 html, body{
   max-width: 100vw !important;
   margin: 0;
